<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.truecaller.assignment.ui.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/truecaller_assignment"
            android:textAlignment="center"
            android:textColor="@color/app_color"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNoInternetConnection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/no_internet_connection"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tvHeading" />

        <TextView
            android:id="@+id/tvError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tvHeading" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/b1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="tvNoInternetConnection,tvError" />

        <Button
            android:id="@+id/btnLoadURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:text="@string/btn_title_load_url"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/llTasks"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/b1">


            <LinearLayout
                android:id="@+id/llTask1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_task1"
                    android:textColor="@color/app_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tvTask1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{viewModel.task1}"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="normal" />


            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/g1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".5" />

            <LinearLayout
                android:id="@+id/llTask2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/g1"
                app:layout_constraintTop_toBottomOf="@id/llTask1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_task2"
                    android:textColor="@color/app_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/tvTask2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.task2}"
                        android:textAlignment="textStart"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                </ScrollView>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llTask3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/g1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_task3"
                    android:textSize="20sp"
                    android:textColor="@color/app_color"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/wordRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>